# driftlock

./: .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
commands/: driftlock.md  lodestar.md
references/: completeness-first-architecture.md  release-quality-rubric.md  responsive-first-architecture.md  upstream-map.json  upstream-map.md
schemas/: browser-evidence.schema.json  ce-synthesis.schema.json  checklist-report.schema.json  debrief.schema.json  execution-plan.schema.json  handoff.schema.json  locked-spec.schema.json  proof-bundle.schema.json  quality-report.schema.json  spec-gate-report.schema.json  task-state.schema.json  tasks.schema.json
scripts/: driftlock  driftlock.py  lodestar  lodestar.py
skills/driftlock-amend/: SKILL.md
skills/driftlock-amend-advisor/: SKILL.md
skills/driftlock-brainstorm/: SKILL.md
skills/driftlock-builder/: SKILL.md
skills/driftlock-compound/: SKILL.md
skills/driftlock-decision-card/: SKILL.md
skills/driftlock-decision-classify/: SKILL.md
skills/driftlock-design-system-lite/: SKILL.md
templates/: agent-dispatch-batch.json  agent-dispatch.json  amendment-request.json  browser-evidence.json  browser-snapshot.json  build-evidence.json  ce-brief.md  ce-synthesis.json  checklist-report.json  debrief-brief.md  debrief.json  decision-card.json  decision-log.jsonl  design-system-lite.md  execution-plan.json  final-handoff.json  handoff.json  learning-note.md  locked-spec.json  manifest.md  palette.md  proof-bundle.json  quality-report.json  responsive-matrix.json  review-report.json  shape-lock.md  shape.html  spec-gate-report.json  state.json  survey.md  task-graph.json  task-state.json  tasks.json  ux-lock.md  ux-preview.html
(+141 files in other folders)
