[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lodestar"
version = "0.1.0"
description = "Completeness-first, UX-first AI development delegation harness — the deterministic gate engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "hanseo5" }]
keywords = ["spec-driven-development", "ai-agents", "harness", "gated-workflow", "compound-engineering"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/hanseo5/lodestar"
Repository = "https://github.com/hanseo5/lodestar"

[project.scripts]
lodestar = "lodestar:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lodestar"]
