[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lodestar"
version = "0.1.0"
description = "Turn rough ideas into clear product direction, approved previews, and finished AI-built products."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "builder-seoro" }]
keywords = ["product-direction", "ai-agents", "product-building", "preview-first", "ai-development"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/builder-seoro/lodestar"
Repository = "https://github.com/builder-seoro/lodestar"

[project.scripts]
lodestar = "lodestar:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lodestar"]
